<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bmiTableActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    tools:context=".BmitTableActivity">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:stretchColumns="1"
        android:paddingLeft="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp"
                android:text="BMI"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp"
                android:text="BMI Status"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>


        <TableRow
            android:layout_width="400dp"
            android:layout_height="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp"
                android:text="@string/underweight_range"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp"
                android:text="@string/underweight"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>


        <TableRow
            android:layout_width="400dp"
            android:layout_height="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp"
                android:text="@string/healthy_range"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp"
                android:text="@string/healthy"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="400dp"
            android:layout_height="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp"
                android:text="@string/overweight_range"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp"
                android:text="@string/overweight"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="400dp"
            android:layout_height="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp"
                android:text="@string/obesity_range"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20sp"
                android:text="@string/obesity"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>